# ChangeLog for sec-policy/selinux-haveged
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  17 Jul 2011; <swift@gentoo.org> +files/fix-services-haveged-r1.patch,
  +selinux-haveged-2.20101213-r1.ebuild, +metadata.xml:
  Initial support for haveged

