@@ -1,5 +1,6 @@
 AUX fix-services-haveged-r1.patch 1121 RMD160 fc4ec16446b365a3c1d3238e513a981646b59944 SHA1 311976796647ff7ba03a100302c5fe77d58e80e7 SHA256 1b2807f9be93293a8939251f13f245b7a26a29efc724640337ded33c115ae433
 DIST refpolicy-2.20101213.tar.bz2 559450 RMD160 4858f792f4db5b179de6fb8419a626c29d59bdd3 SHA1 0e881e99b8950a358eadc44633551ca10f12eaee SHA256 b691ee8f6066cc19bb0d4384fe3be277d97d22e9d4ac2db0c252065e8c3535de
 EBUILD selinux-haveged-2.20101213-r1.ebuild 508 RMD160 6cf69e6d7e095b6d09df733b36087d301e846da7 SHA1 54ca2ca3d2264b50a2ade7b345ee0e116dc8bd12 SHA256 ac15bed133323117a1118e1fbb13945032decfb188c0515d431d38e8c40eaa30
-MISC ChangeLog 287 RMD160 88a45f278193005855af3409684a5d2843b4efe1 SHA1 ff7b7b8b945784251a459997a8a02f4a6d9d3e76 SHA256 ee29b055f983dcd5d30c8e1b5eb1f979b345aaaeecc2bcdf4173091cb187bb3d
+EBUILD selinux-haveged-2.20101213-r2.ebuild 509 RMD160 2f9a92f6bdfa734038de067618d8523f6a184639 SHA1 00a70d011d08475f4268c667e0e903db68a4f347 SHA256 45830f67b60321a2cb850e5bc79299f89f0ba9791de9763b34aea4c7dbaccc88
+MISC ChangeLog 466 RMD160 87643e4b67749f245eb9b312d1fb4970175b671b SHA1 edd43712c55c440bc6cfd2e4acb6e548dbb111a9 SHA256 d7e0251f54656bb55b049f0fe3e3fbb584bf2708632b684fa98605015d46b008
 MISC metadata.xml 231 RMD160 3432cd9b807be77b66e130b4de3dd82f68c3070a SHA1 e47c5ab29df4deeeb3214cee63831c8c3f60f664 SHA256 a115a9266a58ba55675cdb9e54961e61bc69453e4faee154f00cf4f1e29a60c8
